--- a/cspell/authors.txt
+++ b/cspell/authors.txt
@@ -1,8 +1,11 @@
-Cagatay Ulusoy 
+Cagatay
+Ulusoy 
 ulusoyca
-Mikhail Zotyev 
+Mikhail 
+Zotyev 
 MbIXjkee
-Taha Tesser 
+Taha 
+Tesser 
 TahaTesser
 robyf
 mkobuolys
